--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,8 @@ bytecodeFixConfig {
     fixConfig = [
             'com.didi.queue.component.queuecard.view.QueueCardV2View##init()##System.out.println("I1 have hooked this method by BytecodeFixer plugin !!!");##0',
             'com.didi.queue.utils.UIUtils##isFastDoubleClick()##System.out.println("I1 have hooked this method by BytecodeFixer plugin !!!");##0',
-            'com.didi.queue.TestUtils##get()##System.out.println("I1 have hooked this method by BytecodeFixer plugin !!!");##0'
+            'com.didi.queue.TestUtils##get()##System.out.println("I1 have hooked this method by BytecodeFixer plugin !!!");##0',
+            'android.support.constraint.ConstraintLayout##setId(int)##System.out.println("I1 have hooked this method by BytecodeFixer plugin !!!");##0',
+            'android.support.constraint.solver.widgets.Barrier##setBarrierType(int)##System.out.println("I1 have hooked this method by BytecodeFixer plugin !!!");##0'
     ]
 }
