1、重新初始化classPool，但是要注意appendSystemPath() appendDefaultClassPath() 否则会报找不到相关类的错误（如找不到View） 2、主要解决的问题是 如果对同一个类的同一个方法做多次修改 不是增量修改 还是最近的一次修改把之前的修改给覆盖了 目前的解决办法是使用了重新初始化classpool的方法

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,9 +44,13 @@ bytecodeFixConfig {
     dependencies = []
     fixConfig = [
             'com.didi.queue.component.queuecard.view.QueueCardV2View##init()##System.out.println("I1 have hooked this method by BytecodeFixer plugin !!!");##0',
-            'com.didi.queue.utils.UIUtils##isFastDoubleClick()##System.out.println("I1 have hooked this method by BytecodeFixer plugin !!!");##0',
-            'com.didi.queue.TestUtils##get()##System.out.println("I1 have hooked this method by BytecodeFixer plugin !!!");##0',
-            'android.support.constraint.ConstraintLayout##setId(int)##System.out.println("I1 have hooked this method by BytecodeFixer plugin !!!");##0',
-            'android.support.constraint.solver.widgets.Barrier##setBarrierType(int)##System.out.println("I1 have hooked this method by BytecodeFixer plugin !!!");##0'
+//            'com.didi.queue.utils.UIUtils##isFastDoubleClick()##System.out.println("I1 have hooked this method by BytecodeFixer plugin !!!");##0',
+//            'com.didi.queue.TestUtils##get()##System.out.println("I1 have hooked this method by BytecodeFixer plugin !!!");##0',
+//            'android.support.constraint.ConstraintLayout##setId(int)##System.out.println("I1 have hooked this method by BytecodeFixer plugin !!!");##0',
+//            'android.support.constraint.solver.widgets.Barrier##setBarrierType(int)##System.out.println("I1 have hooked this method by BytecodeFixer plugin !!!");##0',
+            'com.didi.queue.component.queuecard.view.QueueCardV2View##init()##{}##0',
+            'com.didi.queue.component.queuecard.view.QueueCardV2View##getView()##System.out.println("I1 have hooked this method by BytecodeFixer plugin !!!");##0'
+
+
     ]
 }
