--- a/build.gradle
+++ b/build.gradle
@@ -38,3 +38,56 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+tasks.withType(JavaCompile) {
+    options.encoding = "UTF-8"
+}
+
+/**
+ * 配置阶段开始前的回调
+ */
+this.beforeEvaluate {
+    //需要研究下
+}
+/**
+ * 配置阶段完成以后的回调
+ */
+this.afterEvaluate {
+    println '配置阶段执行完毕...'
+}
+/**
+ * gradle执行完毕后的回调监听
+ */
+this.gradle.buildFinished {
+    println '执行阶段执行完毕...'
+}
+
+this.gradle.beforeProject {}
+
+this.gradle.afterProject {}
+
+this.getProjects()
+
+def getProjects() {
+    println '-------------------'
+    println 'Root Project'
+    println '-------------------'
+//    this.getAllprojects().eachWithIndex { Project project, int index ->
+//        if(index == 0){
+//            println "Root project ':${project.name}'"
+//        }else{
+//            println "+--- project ':${project.name}'"
+//        }
+//    }
+    this.getSubprojects().eachWithIndex { Project project, int index ->
+        println "+--- project ':${project.name}'"
+    }
+}
+
+this.getRootPro()
+
+def getRootPro() {
+    def name = this.getRootProject().name
+    println "the root project name is: ${name}"
+}
+
