重新初始化classpool dependency中的class和jar也需要重新注入一次 否则就会上报找不到class的问题

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,7 +45,7 @@ bytecodeFixConfig {
             getAppClassesDir()
     ]
     fixConfig = [
-                      'com.didi.queue.component.queuecard.view.QueueCardV2View##init()##System.out.println("I1 have hooked this method by BytecodeFixer plugin !!!");##0',
+                    //  'com.didi.queue.component.queuecard.view.QueueCardV2View##init()##System.out.println("I1 have hooked this method by BytecodeFixer plugin !!!");##0',
 //            'com.didi.queue.utils.UIUtils##isFastDoubleClick()##System.out.println("I1 have hooked this method by BytecodeFixer plugin !!!");##0',
 //            'com.didi.queue.TestUtils##get()##System.out.println("I1 have hooked this method by BytecodeFixer plugin !!!");##0',
 //            'android.support.constraint.ConstraintLayout##setId(int)##System.out.println("I1 have hooked this method by BytecodeFixer plugin !!!");##0',
@@ -53,7 +53,7 @@ bytecodeFixConfig {
             //           'com.didi.queue.component.queuecard.view.QueueCardV2View##init()##{}##0',
             //           'com.didi.queue.component.queuecard.view.QueueCardV2View##getView()##System.out.println("I1 have hooked this method by BytecodeFixer plugin !!!");##0'
 
-          //  'com.didi.queue.component.queuecard.view.QueueCardV2View##init()##com.llew.bytecode.fix.bean.Person var5 = new com.llew.bytecode.fix.bean.Person();var5.name = "xiaoming";##6'
+            'com.didi.queue.component.queuecard.view.QueueCardV2View##init()##com.llew.bytecode.fix.bean.Person var5 = new com.llew.bytecode.fix.bean.Person();var5.name = "xiaoming";##6'
 
     ]
 }
